[gd_scene load_steps=6 format=2]

[ext_resource path="res://Items/Nuke.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Nuke.gd" type="Script" id=2]
[ext_resource path="res://FireTrail.tres" type="Material" id=3]
[ext_resource path="res://Scripts/NukeRadius.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 51.0392

[node name="Nuke" type="RigidBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 2
mode = 2
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Particles2D" type="Particles2D" parent="Node2D"]
position = Vector2( 0, 2 )
z_index = -1
local_coords = false
process_material = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Detonator" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="SeedTrigger" type="CollisionPolygon2D" parent="Detonator"]
polygon = PoolVector2Array( 2, -2, 0, -4, -2, -2, -2, 3, 2, 3 )

[node name="Detonator2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="SeedTrigger" type="CollisionPolygon2D" parent="Detonator2"]
polygon = PoolVector2Array( 2, -2, 0, -4, -2, -2, -2, 3, 2, 3 )

[node name="SeedCollision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="SeedShape" type="CollisionShape2D" parent="SeedCollision"]
shape = SubResource( 1 )

[connection signal="body_entered" from="Detonator" to="." method="_on_Detonator_body_entered"]
[connection signal="area_entered" from="Detonator2" to="." method="_on_Detonator2_area_entered"]
